--- a/6.1 Font Properties/index.html
+++ b/6.1 Font Properties/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Properties</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: cornflowerblue;
@@ -12,18 +15,35 @@
     }
 
     /* Don't change the CSS above, add Your CSS below */
-
+    #color{
+      color:coral;
+    }
+    #fnt-size{
+      font-size: 2rem;
+    }
+    #fnt-weight{
+      font-weight: 900;
+    }
+    #fnt-family{
+      font-family: Caveat,sans-serif;
+    }
+    #txt-align{
+      text-align: right;
+    }
+    html{
+      font-size: 30px;
+    }
     
   </style>
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p id="color">Color</p>
+  <p id="fnt-size">Font Size</p>
+  <p id="fnt-weight">Font Weight</p>
+  <p id="fnt-family">Font Family</p>
+  <p id="txt-align">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
