--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -6,7 +6,29 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
-
+    div{
+      height: 200px;
+      width: 200px;
+    }
+    #d1{
+      background-color: cadetblue;
+      padding: 20px;
+      border: 10px solid black;
+    }
+    #d2{
+      background-color: gold;
+      border: solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+    #d3{
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
+    p{
+      margin: 0px;
+    }
   </style>
 </head>
 
@@ -28,6 +50,11 @@ Hint: Use the CSS inspector in Chrome.
 8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
+<div id="d1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+  id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+  dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p></div>
+<div id="d2"></div>
+<div id="d3"></div>
 
 </body>
 
