--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -5,6 +5,24 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .blue-box{
+      top: 200px;
+      left: 200px;
+      position: relative;
+      height: 300px;
+      width: 500px;
+      background-color: blue;
+    }
+    .red-circle{
+      position: relative;
+      left: 250px;
+      top:150px;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-color: red;
+      
+    }
   </style>
 </head>
 
