--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -6,7 +6,39 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag{
+      position: relative;
+      width: 900px;
+      height: 600px;
+      background-color: #CE1126;
+    }
+    .flag > div{
+      position: absolute;
+      top: 150px;
+      height: 300px;
+      width: 100%;
+      background-color: #002868;
+    }
+    .flag>div>div{
+      position: absolute;
+      top: 50px;
+      left: 39%;
+      background-color: #fff;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+    }
+    p {
+      font-size: 5rem;
+      color: white;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+      
+    }
+    .flag>div div p {
+      color: black;
+    }
   </style>
 </head>
 
