--- a/8.0 CSS Display/index.html
+++ b/8.0 CSS Display/index.html
@@ -10,19 +10,21 @@
 <head>
   <title>CSS Display Property Example</title>
   <style>
-    p {
+    /* Solution 1 */
+    /* p {
+      display:inline-block;
       color: white;
     }
 
     .red {
-      display: block;
+      
       width: 200px;
       height: 200px;
       background-color: red;
     }
 
     .green {
-      display: inline;
+       display: inline;
       width: 200px;
       height: 200px;
       background-color: green;
@@ -30,6 +32,32 @@
 
     .blue {
       display: inline-block;
+      width: 200px;
+      height: 200px;
+      background-color: blue;
+    } */
+    /* solution 2 */
+    p {
+      display:block;
+      color: white;
+    }
+
+    .red {
+      
+      width: 200px;
+      height: 200px;
+      background-color: red;
+    }
+
+    .green {
+      /* display: inline; */
+      width: 200px;
+      height: 200px;
+      background-color: green;
+    }
+
+    .blue {
+      display: block;
       width: 200px;
       height: 200px;
       background-color: blue;
