--- a/9.1 Flex Direction/index.html
+++ b/9.1 Flex Direction/index.html
@@ -13,9 +13,13 @@
     .container {
       color: white;
       border: 5px solid gold;
-      display: flex;
+      display: inline-flex;
+      flex-direction: column;
+      flex-basis: 100px;
     }
-
+    .container>div{
+      height: 100px;
+    }
     /*
 Select all the elements that are the direct
 children of the .container class.
