--- a/10.1 Grid Sizing/test.html
+++ b/10.1 Grid Sizing/test.html
@@ -60,7 +60,7 @@
     }
 
     .grid-item {
-      background-color: darkviolet;
+      background-color: blue;
       color: white;
       font-size: 18px;
       padding: 20px;
