--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -19,11 +19,71 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+    body{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container{
+      display:grid;
+      height: 748px;
+      width: 748px;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px auto;
+      gap:9px;
+      background-color: black;
+    }
+    .red{
+      background-color: red;
+    }
+    .white1{
+      background-color: #fff;
+      grid-column:span 3;
+    }
+    .white2{
+      background-color: #fff;
+      grid-row: span 2;
+    }
+    .white3{
+      background-color: #fff;
+      grid-row:span 2;
+      grid-column:span 2;
+    }
+    .white4{
+      background-color: #fff;
+      grid-row:span 2;
+    }
+    .white5{
+      background-color: #fff;
+    }
+    .blue{
+      background-color: blue;
+      order:0;
+      border-bottom: 10px solid black;
+    }
+    .yellow{
+      background-color: yellow;
+    }
+    .black{
+      background-color: black;
+    }
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+  <div class="container">
+    <div class="red"></div>
+    <div class="white1"></div>
+    <div class="white2"></div>
+    <div class="white3"></div>
+    <div class="blue"></div>
+    <div class="white4"></div>
+    <div class="white5"></div>
+    <div class="yellow"></div>
+    <div class="black"></div>
+  </div>
 </body>
 
 </html>
