--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
+            <div id="card" class="card mb-4 rounded-3 shadow-sm border-primary">
               <div class="card-header py-3 text-bg-dark border-primary">
                 <h4 class="my-0 fw-normal">Mastiff</h4>
               </div>
@@ -209,7 +209,7 @@
     <!-- Footer -->
     <section id="footer" class="gradient-background">
       <div class="container">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
