--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Lobster&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Libre+Baskerville&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,16 +18,18 @@
     <p>Take rest play a game to free your mind</p>
     <div class="container">
     <div id="p1" class="pbox animation"><h2>Player 1</h2><span id="turn1">Your Turn</span></div>
+    <img id="win" hidden  src="./images/4M57.gif" alt="">
+    <h1 id="wintext">Player Win</h1>
     <div class="game-container">
-        <div class="box">0</div>
-        <div class="box bl">1</div>
-        <div class="box bl">2</div>
-        <div class="box bt">3</div>
-        <div class="box bl bt">4</i></div>
-        <div class="box bl bt">5</div>
-        <div class="box bt">6</div>
-        <div class="box bl bt ">7</div>
-        <div class="box bl bt">8</div>
+        <div class="box"></div>
+        <div class="box bl"></div>
+        <div class="box bl"></div>
+        <div class="box bt"></div>
+        <div class="box bl bt"></i></div>
+        <div class="box bl bt"></div>
+        <div class="box bt"></div>
+        <div class="box bl bt "></div>
+        <div class="box bl bt"></div>
     </div>
     <div id="p2" class="pbox "><h2>Player 2</h2><span id="turn2"></span></div>
     </div>
